Fixed...   BUG#6642: Stored procedure crash if expression with set function   BUG#7013: Stored procedure crash if group by ... with rollup   BUG#7743: 'Lost connection to MySQL server during query' on Stored Procedure   BUG#7992: SELECT .. INTO variable .. within Stored Procedure crashes             the server   BUG#8116: calling simple stored procedure twice in a row results             in server crash

Rolling back the item change list after each substatement in a procedure
fixed the failing assert().