sql/sp_head.cc
@@ -1251,6 +1251,7 @@ sp_instr_stmt::exec_stmt(THD *thd, LEX *lex)
   res= mysql_execute_command(thd);
 
   lex->unit.cleanup();
+  thd->rollback_item_tree_changes();
   if (thd->lock || thd->open_tables || thd->derived_tables)
   {
     thd->proc_info="closing tables";
